syntax = "proto3";

package scanner.v4;

import "internalapi/scanner/v4/index_report.proto";

option go_package = "v4";

message CreateNodeIndexReportRequest {
  string hash_id = 1;
}

service NodeIndexer {
  // CreateNodeIndexReport creates an index report for the node the container runs on and returns the report.
  rpc CreateNodeIndexReport(CreateNodeIndexReportRequest) returns (IndexReport);
}
